<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/tv_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/textInput_Email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/textInput_Password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_register"
        />
</LinearLayout>